testsuite/poke.pkl/cast-array-diag-8.pk
/* { dg-do compile } */

var a = [1,2] as offset<int,B>; /* { dg-error "" } */
